allow RUD on configurations
