# apiserver/api_configuration.go
@@ -13,6 +13,8 @@ import (
 	"encoding/json"
 	"net/http"
 	"strings"
+
+	"github.com/gorilla/mux"
 )
 
 // ConfigurationApiController binds http requests to an api service and writes the service results to the http response
@@ -49,6 +51,18 @@ func NewConfigurationApiController(s ConfigurationApiServicer, opts ...Configura
 func (c *ConfigurationApiController) Routes() Routes {
 	return Routes{
 		{
+			"DeleteConfigurationById",
+			strings.ToUpper("Delete"),
+			"/configs/{config-id}",
+			c.DeleteConfigurationById,
+		},
+		{
+			"GetConfigurationById",
+			strings.ToUpper("Get"),
+			"/configs/{config-id}",
+			c.GetConfigurationById,
+		},
+		{
 			"GetConfigurations",
 			strings.ToUpper("Get"),
 			"/configs",
@@ -60,7 +74,53 @@ func (c *ConfigurationApiController) Routes() Routes {
 			"/configs",
 			c.PostConfiguration,
 		},
+		{
+			"PutConfigurationById",
+			strings.ToUpper("Put"),
+			"/configs/{config-id}",
+			c.PutConfigurationById,
+		},
 	}
+}
+
+// DeleteConfigurationById - Deletes a Kentix configuration
+func (c *ConfigurationApiController) DeleteConfigurationById(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	configIdParam, err := parseInt64Parameter(params["config-id"], true)
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+
+	result, err := c.service.DeleteConfigurationById(r.Context(), configIdParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+
+}
+
+// GetConfigurationById - Get Kentix configuration
+func (c *ConfigurationApiController) GetConfigurationById(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	configIdParam, err := parseInt64Parameter(params["config-id"], true)
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+
+	result, err := c.service.GetConfigurationById(r.Context(), configIdParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+
 }
 
 // GetConfigurations - Get all Kentix configurations
@@ -90,6 +150,37 @@ func (c *ConfigurationApiController) PostConfiguration(w http.ResponseWriter, r 
 		return
 	}
 	result, err := c.service.PostConfiguration(r.Context(), configurationParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+
+}
+
+// PutConfigurationById - Updates a Kentix configuration
+func (c *ConfigurationApiController) PutConfigurationById(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	configIdParam, err := parseInt64Parameter(params["config-id"], true)
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+
+	configurationParam := Configuration{}
+	d := json.NewDecoder(r.Body)
+	d.DisallowUnknownFields()
+	if err := d.Decode(&configurationParam); err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	if err := AssertConfigurationRequired(configurationParam); err != nil {
+		c.errorHandler(w, r, err, nil)
+		return
+	}
+	result, err := c.service.PutConfigurationById(r.Context(), configIdParam, configurationParam)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		c.errorHandler(w, r, err, &result)
